[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://Enemy_Jet.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemyTank.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bomber.tscn" type="PackedScene" id=4]
[ext_resource path="res://parallaxBg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Base.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32, 992, 0, 0, 0, 0, 5984, 992 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 96, 96, 0, 0, 0, 0, 1152, 800 )
}

[node name="Level_One" type="Node2D"]
script = ExtResource( 1 )
enemy = ExtResource( 2 )
tank = ExtResource( 3 )
bomber = ExtResource( 4 )
rightLimit = 6016
maxEnemies = 10

[node name="parallaxBg" parent="." instance=ExtResource( 5 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="RightPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RightSpawnLoc" type="PathFollow2D" parent="RightPath"]
position = Vector2( 32, 992 )

[node name="LeftPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="LeftSpawnLoc" type="PathFollow2D" parent="LeftPath"]
position = Vector2( 96, 96 )
rotation = 0.587999

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 3040, 1040 )

[node name="TileMap" parent="." instance=ExtResource( 7 )]
tile_data = PoolIntArray( 2097161, 1, 0, 2097181, 1, 0, 2097182, 1, 0, 2097193, 1, 0, 2097194, 1, 0, 2097195, 1, 0, 2097218, 1, 0, 2097233, 1, 0, 2097234, 1, 0, 2097235, 1, 0, 2097243, 1, 0, 2097244, 1, 0, 2097254, 1, 0, 2097262, 1, 0, 2162688, 0, 0, 2162689, 0, 0, 2162690, 0, 0, 2162691, 0, 0, 2162692, 0, 0, 2162693, 0, 0, 2162694, 0, 0, 2162695, 0, 0, 2162696, 0, 0, 2162697, 0, 0, 2162698, 0, 0, 2162699, 0, 0, 2162700, 0, 0, 2162701, 0, 0, 2162702, 0, 0, 2162703, 0, 0, 2162704, 0, 0, 2162705, 0, 0, 2162706, 0, 0, 2162707, 0, 0, 2162708, 0, 0, 2162709, 0, 0, 2162710, 0, 0, 2162711, 0, 0, 2162712, 0, 0, 2162713, 0, 0, 2162714, 0, 0, 2162715, 0, 0, 2162716, 0, 0, 2162717, 0, 0, 2162718, 0, 0, 2162719, 0, 0, 2162720, 0, 0, 2162721, 0, 0, 2162722, 0, 0, 2162723, 0, 0, 2162724, 0, 0, 2162725, 0, 0, 2162726, 0, 0, 2162727, 0, 0, 2162728, 0, 0, 2162729, 0, 0, 2162730, 0, 0, 2162731, 0, 0, 2162732, 0, 0, 2162733, 0, 0, 2162734, 0, 0, 2162735, 0, 0, 2162736, 0, 0, 2162737, 0, 0, 2162738, 0, 0, 2162739, 0, 0, 2162740, 0, 0, 2162741, 0, 0, 2162742, 0, 0, 2162743, 0, 0, 2162744, 0, 0, 2162745, 0, 0, 2162746, 0, 0, 2162747, 0, 0, 2162748, 0, 0, 2162749, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2162752, 0, 0, 2162753, 0, 0, 2162754, 0, 0, 2162755, 0, 0, 2162756, 0, 0, 2162757, 0, 0, 2162758, 0, 0, 2162759, 0, 0, 2162760, 0, 0, 2162761, 0, 0, 2162762, 0, 0, 2162763, 0, 0, 2162764, 0, 0, 2162765, 0, 0, 2162766, 0, 0, 2162767, 0, 0, 2162768, 0, 0, 2162769, 0, 0, 2162770, 0, 0, 2162771, 0, 0, 2162772, 0, 0, 2162773, 0, 0, 2162774, 0, 0, 2162775, 0, 0, 2162776, 0, 0, 2162777, 0, 0, 2162778, 0, 0, 2162779, 0, 0, 2162780, 0, 0, 2162781, 0, 0, 2162782, 0, 0, 2162783, 0, 0, 2162784, 0, 0, 2162785, 0, 0, 2162786, 0, 0, 2162787, 0, 0, 2162788, 0, 0, 2162789, 0, 0, 2162790, 0, 0, 2162791, 0, 0, 2162792, 0, 0, 2162793, 0, 0, 2162794, 0, 0, 2162795, 0, 0, 2162796, 0, 0, 2162797, 0, 0, 2162798, 0, 0, 2162799, 0, 0, 2162800, 0, 0, 2162801, 0, 0, 2162802, 0, 0, 2162803, 0, 0, 2162804, 0, 0, 2162805, 0, 0, 2162806, 0, 0, 2162807, 0, 0, 2162808, 0, 0, 2162809, 0, 0, 2162810, 0, 0, 2162811, 0, 0, 2162812, 0, 0, 2162813, 0, 0, 2162814, 0, 0, 2162815, 0, 0, 2162816, 0, 0, 2162817, 0, 0, 2162818, 0, 0, 2162819, 0, 0, 2162820, 0, 0, 2162821, 0, 0, 2162822, 0, 0, 2162823, 0, 0, 2162824, 0, 0, 2162825, 0, 0, 2162826, 0, 0, 2162827, 0, 0, 2162828, 0, 0, 2162829, 0, 0, 2162830, 0, 0, 2162831, 0, 0, 2162832, 0, 0, 2162833, 0, 0, 2162834, 0, 0, 2162835, 0, 0, 2162836, 0, 0, 2162837, 0, 0, 2162838, 0, 0, 2162839, 0, 0, 2162840, 0, 0, 2162841, 0, 0, 2162842, 0, 0, 2162843, 0, 0, 2162844, 0, 0, 2162845, 0, 0, 2162846, 0, 0, 2162847, 0, 0, 2162848, 0, 0, 2162849, 0, 0, 2162850, 0, 0, 2162851, 0, 0, 2162852, 0, 0, 2162853, 0, 0, 2162854, 0, 0, 2162855, 0, 0, 2162856, 0, 0, 2162857, 0, 0, 2162858, 0, 0, 2162859, 0, 0, 2162860, 0, 0, 2162861, 0, 0, 2162862, 0, 0, 2162863, 0, 0, 2162864, 0, 0, 2162865, 0, 0, 2162866, 0, 0, 2162867, 0, 0, 2162868, 0, 0, 2162869, 0, 0, 2162870, 0, 0, 2162871, 0, 0, 2162872, 0, 0, 2162873, 0, 0, 2162874, 0, 0, 2162875, 0, 0 )

[node name="Base" parent="." instance=ExtResource( 8 )]
position = Vector2( 2976, 1025.2 )
[connection signal="update_mission_status_text" from="." to="Player" method="_on_update_mission_status_text"]
[connection signal="update_score" from="." to="Player" method="_on_update_score"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="base_entered" from="Base" to="." method="_on_Base_base_entered"]
[connection signal="base_exited" from="Base" to="." method="_on_Base_base_exited"]
